--- a/forget password/forget.css
+++ b/forget password/forget.css
@@ -45,6 +45,7 @@ button{
     font-size: 15px;
     background-color: rgb(44, 219, 250);
     color: white;
+    font-weight: bold;
 }
 button:hover{
    background-color: rgb(4, 146, 182);
